# verdant-backend

./: FEDERATION_BOUNDARIES.md  README.md  SECURITY_HARDENING.md
server-rs/: BOT_API.md  Cargo.toml  Dockerfile  audit.toml  build.rs
server-rs/migrations/: 0001_slice1_auth.sql  0002_slice2_users_dms_relationships.sql  0003_slice3_servers_channels_roles.sql  0004_slice4_messages_attachments_reactions_read_states.sql  0005_slice6_audit_login_subscription.sql  0006_slice7_bots_feeds_announcements_invites_moderation.sql  0007_users_status_columns.sql  0008_notification_prefs.sql  0009_bot_gateway_outbox.sql  0010_bot_static_visuals.sql  0011_bot_delete_preserve_announcements.sql  0012_bot_profiles_roles.sql  0013_revoke_everyone_create_invite.sql  0014_app_bans_billing.sql  0015_clear_subscription_ring_styles.sql  0016_bug_reports.sql  0017_reports_pending_unique.sql  0018_banner_crop_metadata.sql  0019_user_custom_status.sql  0020_user_member_list_banner.sql  0021_user_legal_acceptances.sql  0022_role_display_model.sql  0023_postgres_rls.sql  0024_federation_registry.sql  0025_account_linking_foundation.sql  0026_account_link_revocation_propagation.sql  0027_user_banner_base_color.sql  0028_federation_runtime_foundation.sql  0029_federation_client_memberships.sql  0030_custom_stickers.sql  0031_custom_expression_asset_dedupe.sql  0032_sensitive_field_encryption_foundation.sql  checksums.sha384
server-rs/src/: config.rs  error.rs  lib.rs  main.rs  snowflake.rs  state.rs  verdant.rs
server-rs/src/federation/: auth.rs  client.rs  client_membership.rs  identity.rs  ingress.rs  invite_join.rs  maintenance.rs  mod.rs  outbox.rs  ownership.rs  producer.rs  protocol.rs  runtime.rs  storage.rs
server-rs/src/handlers/: account_links.rs  admin.rs  admin_loadtest.rs  announcements.rs  audit.rs  auth.rs  billing.rs  bots.rs  bug_reports.rs  categories.rs  channel_overrides.rs  channels.rs  dms.rs  email_verify.rs  emojis.rs  federation.rs  federation_memberships.rs  feeds.rs  instance.rs  invite_codes.rs  invites.rs  link_previews.rs  media.rs  media_diagnostics.rs  messages.rs  mod.rs  moderation.rs  notifications.rs  password_reset.rs  pins.rs  reactions.rs  relationships.rs  reorder.rs  reports.rs  roles.rs  server_workspace.rs  servers.rs  stickers.rs  stripe_webhook.rs  sync.rs  (+5 more)
server-rs/src/middleware/: auth.rs  csrf.rs  mod.rs  rate_limit.rs  rate_limit_layer.rs  response_sanitizer.rs  security_headers.rs  timing.rs
server-rs/src/repo/: categories.rs  channels.rs  dm_channels.rs  messages.rs  mod.rs  servers.rs  sessions.rs  users.rs
server-rs/src/services/: announcements.rs  app_bans.rs  audit.rs  banner_crop.rs  bot_events.rs  bot_gateway.rs  bot_permissions.rs  broadcast.rs  cdn.rs  channel_access.rs  channel_visibility.rs  content_scan_task.rs  content_scanner.rs  crypto.rs  device.rs  email.rs  email_validation.rs  entitlements.rs  feature_flags.rs  field_crypto.rs  field_encryption_backfill.rs  geoip.rs  hash_service.rs  hmac_sign.rs  image_sanitizer.rs  instance.rs  link_preview.rs  mod.rs  (+25 more)
server-rs/tests/: federation_auth.rs  federation_client.rs  federation_client_capability.rs  federation_client_membership.rs  federation_inbound_storage.rs  federation_ingress.rs  federation_invite_join.rs  federation_outbox.rs  federation_outbox_dispatch.rs  federation_producer.rs  federation_protocol.rs  federation_remote_identity.rs  federation_remote_principal_storage.rs  federation_runtime.rs  federation_s2s_smoke_harness.rs  federation_server_owned_model.rs  federation_storage_schema.rs  field_encryption_storage.rs
(+65 files in other folders)
